--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<li><a href="jc.html">使用教程</a></li>
 						<li><a 
 href="https://dog.lanzous.com/icqhtti" target="_blank">源码下载</a></li>
-						<li><a href="https://share.weiyun.com/77iemms7" target="_blank">盒子下载</a>
+						<li><a href="https://share.weiyun.com/7x9OzIWb" target="_blank">盒子下载</a>
 						<li><a href="https://jq.qq.com/?_wv=1027&k=Le01ZC7w" target=_blank">加入群聊</a>
 					</ul>
 				</div>
@@ -41,7 +41,7 @@ href="https://dog.lanzous.com/icqhtti" target="_blank">源码下载</a></li>
 		<div class="text-wrap">
 			<p class="title">美化盒子-V1.0.0</p>
 			<p class="description">一 个 开 源 的 屑 作 - By:Dog</p>
-			<a href="https://share.weiyun.com/77iemms7" target="_blank" class="btn">现在下载</a>
+			<a href="https://share.weiyun.com/7x9OzIWb" target="_blank" class="btn">现在下载</a>
 		</div>
 	</div>
 </header>
