--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<div class="col-3-4">
 					<ul id="menu" class="main-menu">
 						<li><a href="#" class="active">主页</a></li>
+						<li><a href="new.html">内存美化</a></li>
 						<li><a href="gx.html">更新说明</a></li>
 						<li><a href="jc.html">使用教程</a></li>
 						<li><a 
