--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>盒子使用教程</title>
+<title>内存美化盒子</title>
 <link rel="stylesheet" href="ionicons/2.0.1/css/ionicons.min.css">
 <link rel="shortcut icon" type="images/x-icon" href="images/favicon.png">
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Play" rel="stylesheet">
@@ -16,14 +16,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-1-4">
-					<h1 class="logo"><a href="index.html">美化盒子-说明</a>
-						<img src="images/logo.png" alt="">
+					<h1 class="logo"><a href="index.html">内存美化盒子</a>
+						<img src="images/logo.png" alt="logo">
 					</h1>
 				</div>
 				<div class="col-3-4">
 					<ul id="menu" class="main-menu">
 						<li><a href="index.html" class="active">主页</a></li>
-						<li><a href="new.html">内存美化</a></li>
+						<li><a href="gx.html">内存美化</a></li>
 						<li><a href="gx.html">更新说明</a></li>
 						<li><a href="jc.html">使用教程</a></li>
 						<li><a 
@@ -37,67 +37,50 @@ href="https://dog.lanzous.com/icqhtti" target="_blank">源码下载</a></li>
 	</nav>
 
 	<!-- HERO IMG -->
-	<div class="head-img">
-		<img src="images/service-head.jpg" alt="head-img" class="serv-head">
+	<div class="hero-img">
+		<img src="images/contact-head.jpg" alt="head-img" class="contact-head">
 		<div class="text-wrap">
-			<p class="title">使 用 教 程</p>
+			<p class="title"><span style="color:#FFFFFF;">内存美化介绍</span></p>
+<a href="https://dog.lanzous.com/iO1sHe9ii8h" target="_blank" class="btn">现在下载</a>
 		</div>
 	</div>
 </header>
 
-<!-- OUR STORY SECTION -->
-<div class="service-serv">
+<!-- GET IN TOUCH SECTION -->
+<div class="get-in-touch">
 	<div class="container">
 		<div class="row">
 			<div class="col-1-2">
-				<div class="text-wrapper">
-					<h2 class="section-title">1.加载模型</h2>
-					<p class="body-text">
-						先进入自定义选择用来修改的皮肤<br>例如暴风狂飙改赛巴斯<br>先使用暴风狂飙进入游戏  然后关闭游戏修改<br>如果你以前玩过或遇到过这个英雄/皮肤 则跳过此步骤
-					</p>
-				</div>
-			</div>
-			<div class="col-1-2">
-				<img src="images/serv1.png" alt="service" class="serv-img">
-			</div>
-		</div>
-	</div>
-</div>
-<div class="service-serv service-2">
-	<div class="container">
-		<div class="row">
-			<div class="col-1-2">
-				<img src="images/serv2.png" alt="service" class="serv-img">
+				<img src="images/neicun.png" alt="service">
 			</div>
 			<div class="col-1-2">
 				<div class="text-wrapper">
-					<h2 class="section-title">2.替换文件</h2>
+					<h2 class="section-title">内存美化盒子V1.0.0</h2>
 					<p class="body-text">
-						打开美化盒子 选择你要修改的皮肤 单击左键修改<br>修改失败按照提示关闭游戏后修改<br>血条修改需要重启游戏生效
+						7月3日更新的测试版，修改了内存可能使封号概率变大。<br>游戏更新可能失效，怕封号谨慎使用(建议小号)
+					</p>
+					<p class="body-text contact-info">
+						1.包含近500个皮肤
+					</p>
+					<p class="body-text contact-info">
+						2.游戏内随时替换
+					</p>
+					<p class="body-text contact-info">
+						3.适用于所有英雄/皮肤
+					</p>
+					</p>
+					<p class="body-text contact-info">
+						4.完美的替换皮肤特效/声音
 					</p>
 				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="service-serv">
-	<div class="container">
-		<div class="row">
-			<div class="col-1-2">
-				<div class="text-wrapper">
-					<h2 class="section-title">3.注意事项</h2>
-					<p class="body-text">
-						软件不支持XP系统 不支持大厅游戏<br>如果提示成功进入游戏没效果的话<br>关闭杀软/防火墙 以管理员身份运行软件再试一次
-					</p>
-				</div>
-			</div>
-			<div class="col-1-2">
-				<img src="images/serv3.png" alt="service" class="serv-img">
 			</div>
 		</div>
 	</div>
 </div>
 
+
+<!-- GOOGLE MAP -->
+<!---<div id="googleMap"></div>--->
 
 <!-- FOOTER SECTION -->
 <footer>
