--- a/new.html
+++ b/new.html
@@ -41,7 +41,7 @@ href="https://dog.lanzous.com/icqhtti" target="_blank">源码下载</a></li>
 		<img src="images/contact-head.jpg" alt="head-img" class="contact-head">
 		<div class="text-wrap">
 			<p class="title"><span style="color:#FFFFFF;">内存美化介绍</span></p>
-<a href="https://dog.lanzous.com/ipekge9n6if" target="_blank" class="btn">现在下载</a>
+<a href="https://dog.lanzous.com/iHLemebehof" target="_blank" class="btn">现在下载</a>
 		</div>
 	</div>
 </header>
