--- a/new.html
+++ b/new.html
@@ -63,10 +63,10 @@ href="https://dog.lanzous.com/icqhtti" target="_blank">源码下载</a></li>
 						1.包含近500个皮肤
 					</p>
 					<p class="body-text contact-info">
-						2.游戏内随时替换
+						2.所有模式游戏内随时替换
 					</p>
 					<p class="body-text contact-info">
-						3.适用于所有英雄/皮肤
+						3.适用于所有可以上马的英雄/皮肤
 					</p>
 					</p>
 					<p class="body-text contact-info">
