--- a/new.html
+++ b/new.html
@@ -66,7 +66,7 @@ href="https://dog.lanzous.com/icqhtti" target="_blank">源码下载</a></li>
 						2.所有模式游戏内随时替换
 					</p>
 					<p class="body-text contact-info">
-						3.适用于所有可以上马的英雄/皮肤
+						3.适用于所有可以上马的英雄/非换皮皮肤
 					</p>
 					</p>
 					<p class="body-text contact-info">
