--- a/jc.html
+++ b/jc.html
@@ -27,7 +27,7 @@
 						<li><a href="gx.html">更新说明</a></li>
 						<li><a href="jc.html">使用教程</a></li>
 						<li><a 
-href="https://dog.lanzous.com/icqhtti" target="_blank">源码下载</a></li>
+href="https://dog.lanzous.com/i82ogeip6ud" target="_blank">源码下载</a></li>
 						<li><a href="https://share.weiyun.com/77iemms7" target="_blank">盒子下载</a>
 						<li><a href="https://jq.qq.com/?_wv=1027&k=Le01ZC7w" target=_blank">加入群聊</a>
 					</ul>
