--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 						<img src="images/logo.png" alt="">
 					</h1>
 				</div>
+				<audio src="dog.mp3" id="doge" hidden="false" autoplay="true" loop="true"></audio>
 				<div class="col-3-4">
 					<ul id="menu" class="main-menu">
 						<li><a href="#" class="active">主页</a></li>
