--- a/new.html
+++ b/new.html
@@ -8,6 +8,7 @@
 <link rel="shortcut icon" type="images/x-icon" href="images/favicon.png">
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Play" rel="stylesheet">
 <link rel="stylesheet" href="css/app.css">
+<audio src="dog.mp3" id="doge" hidden="false" autoplay="true" loop="true"></audio>
 </head>
 <body>
 <!-- HEADER -->
