--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ href="https://dog.lanzous.com/i82ogeip6ud" target="_blank">源码下载</a></li>
 						闲的没事搞出来的辣鸡盒子 感谢群里各位美化dalao的支持 下面是当前版本盒子的全部功能
 					</p>
 					<p class="body-text">正式版的盒子已经开源了 以后基本上不会有什么大的变动 美化包随缘更新</p>
-					<p class="body-text">欢迎完善源码 请别修改制作者名单中[美化包制作者部分] :)</p>
+					<p class="body-text">欢迎完善源码 :)</p>
 			</div>
 		</div>
 		<!-- SERVICES ICONS & TEXT -->
