--- a/new.html
+++ b/new.html
@@ -30,7 +30,7 @@
 						<li><a 
 href="https://dog.lanzous.com/i82ogeip6ud" target="_blank">源码下载</a></li>
 						<li><a href="https://share.weiyun.com/77iemms7" target="_blank">盒子下载</a>
-						<li><a href="https://jq.qq.com/?_wv=1027&k=Le01ZC7w" target=_blank">加入群聊</a>
+						<li><a href="https://jq.qq.com/?_wv=1027&k=UbuxQy8q" target=_blank">加入群聊</a>
 					</ul>
 				</div>
 			</div>
