--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<li><a 
 href="https://dog.lanzous.com/i82ogeip6ud" target="_blank">源码下载</a></li>
 						<li><a href="https://share.weiyun.com/7x9OzIWb" target="_blank">盒子下载</a>
-						<li><a href="https://jq.qq.com/?_wv=1027&k=Le01ZC7w" target=_blank">加入群聊</a>
+						<li><a href="https://jq.qq.com/?_wv=1027&k=UbuxQy8q" target=_blank">加入群聊</a>
 					</ul>
 				</div>
 			</div>
@@ -304,7 +304,7 @@ href="https://dog.lanzous.com/i82ogeip6ud" target="_blank">源码下载</a></li>
 		<p class="body-text">如果你有能力的话可以赞助Dog</p>
 		<p class="body-text">当然不会有什么奖励qwq</p>
 		<p class="body-text last">如果你想赞助的话可以在软件内点击赞助Dog</p>
-		<p class="copyright">更多美化包请<a target="_blank" href="https://jq.qq.com/?_wv=1027&k=SDyAIfgj"><span style="background-color:#FFFFFF;color:#000000;">加群获取</span></a></p>
+		<p class="copyright">更多美化包请<a target="_blank" href="https://jq.qq.com/?_wv=1027&k=UbuxQy8q"><span style="background-color:#FFFFFF;color:#000000;">加群获取</span></a></p>
 	</div>
 </footer>
 
