Update and rename 索引.html to •.html

--- a/•.html
+++ b/•.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>英魂美化包(第一次进入要多等一会)</title>
+  <title>英魂美化包</title>
 
   <!-- Vendor Stylesheets -->
   <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
