--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
           <div class="andro_newsletter-popup-text-wrapper">
             <h3>加入美化包群</h3>
-            <p>群里不定时更新皮肤美化<br/>也可以找群主上传美化到网站<br/>只改微端，用QQ游戏的可以点右上角了<br/>手机访问有BUG，请用电脑</p>
+            <p>群里不定时更新皮肤美化<br/>也可以找群主上传美化到网站<br/>只改微端，用QQ游戏的可以点右上角了</p>
           </div>
 
           <form method="post" class="text-center">
