--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <html lang="en" dir="ltr">
 <link rel="shortcut icon" type="images/x-icon" href="assets/img/logo.png">
 <head>
@@ -223,7 +224,6 @@
       <div class="sidebar-widget">
         <h5 class="widget-title">学♂习网站(后面带[V]的需要VPN)</h5>
         <div class="tagcloud">
-	  <a href="https://acgp.xyz/" target="_blank"">次元の物语</a> 
           <a href="https://www.xvideos.com/" target="_blank"">xvideos[V]</a> 
           <a href="https://github.com/banwhard9uu/new-url/wiki" target="_blank"">9UU</a> 
           <a href="https://nhentai.net/" target="_blank"">NH本子[V]</a> 
@@ -359,14 +359,6 @@
   </header>
   <!-- Header End -->
 
-									  <!-- Banner Start -->
-  <div class="andro_banner banner-3 bg-contain bg-norepeat">
-
-    <img src="assets/img/banner2.jpg" class="d-none d-lg-block" alt="banner img">
-
-    <div class="andro_banner-slider">
-
-
   <!-- Banner Start -->
   <div class="andro_banner banner-3 bg-contain bg-norepeat">
 
@@ -385,7 +377,7 @@
                 </div>
                 <div class="andro_product-thumb">
                   <img src="assets/img/products/4.png" alt="product">
-                  <div class="andro_countdown-timer" data-countdown="2077/05/06">378 days 13:13:07</div>
+                  <div class="andro_countdown-timer" data-countdown="3447/07/30">378 days 13:13:07</div>
                 </div>
                 <div class="andro_product-body">
                   <h5 class="andro_product-title"> 忘川神乐妖姬改朱菜</h5>
@@ -397,7 +389,7 @@
                       <i class="fa fa-star active"></i>
                       <i class="fa fa-star active"></i>
                     </div>
-                    <span>模型+特效</span>
+                    <span>特效+模型</span>
                   </div>
                 </div>
                 <div class="andro_product-footer">
@@ -478,7 +470,7 @@
                 </div>
                 <div class="andro_product-thumb">
                   <img src="assets/img/products/14.png" alt="product">
-                  <div class="andro_countdown-timer" data-countdown="2077/05/06">378 days 13:13:07</div>
+                  <div class="andro_countdown-timer" data-countdown="3847/04/024">378 days 13:13:07</div>
                 </div>
                 <div class="andro_product-body">
                   <h5 class="andro_product-title"> 司马懿原皮改骨王</h5>
@@ -527,7 +519,7 @@
                 </div>
                 <div class="andro_product-thumb">
                   <img src="assets/img/products/15.png" alt="product">
-                  <div class="andro_countdown-timer" data-countdown="2077/05/06">378 days 13:13:07</div>
+                  <div class="andro_countdown-timer" data-countdown="7710/07/01">378 days 13:13:07</div>
                 </div>
                 <div class="andro_product-body">
                   <h5 class="andro_product-title"> 
@@ -576,7 +568,7 @@
                 </div>
                 <div class="andro_product-thumb">
                   <img src="assets/img/products/8.png" alt="product">
-                  <div class="andro_countdown-timer" data-countdown="2077/05/06">378 days 13:13:07</div>
+                  <div class="andro_countdown-timer" data-countdown="2022/02/16">378 days 13:13:07</div>
                 </div>
                 <div class="andro_product-body">
                   <h5 class="andro_product-title"> 李白原皮改死灵</h5>
