--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
           <div class="andro_newsletter-popup-text-wrapper">
             <h3>加入美化包群</h3>
-            <p>群里不定时更新皮肤美化<br/>也可以找群主上传美化到网站<br/>只改微端，用QQ游戏的可以点右上角了<br/>手机版有BUG，用电脑访问</p>
+            <p>群里不定时更新皮肤美化<br/>也可以找群主上传美化到网站<br/>只改微端，用QQ游戏的可以点右上角了<br/>手机版有BUG，用电脑访问<br/>隐藏内容访问密码2333</p>
           </div>
 
           <form method="post" class="text-center">
@@ -186,7 +186,7 @@
                 <!-- Level 1 -->
 
                   <ul class="navbar-nav">
-                  <li class="menu-item"> <a href="assets\img\a.jpg" target="_blank">来点色图</a> </li>
+                  <li class="menu-item"> <a href="setu.html" target="_blank">来点色图</a> </li>
 
 
                     <!-- Level 2 -->
