--- a/setu.html
+++ b/setu.html
@@ -120,6 +120,7 @@ if (password != '2333')
       <div class="sidebar-widget">
         <h5 class="widget-title">学♂习网站(后面带[V]的需要VPN)</h5>
         <div class="tagcloud">
+	  <a href="https://www.amcomic.com" target="_blank"">一个漫画</a> 
           <a href="https://www.xvideos.com/" target="_blank"">xvideos[V]</a> 
           <a href="https://github.com/banwhard9uu/new-url/wiki" target="_blank"">9UU</a> 
           <a href="https://nhentai.net/" target="_blank"">NH本子[V]</a> 
