--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
       <div class="sidebar-widget">
         <h5 class="widget-title">学♂习网站(后面带[V]的需要VPN)</h5>
         <div class="tagcloud">
-	  <a href="https://www.amcomic.com" target="_blank"">一个漫画</a> 
           <a href="https://www.xvideos.com/" target="_blank"">xvideos[V]</a> 
           <a href="https://github.com/banwhard9uu/new-url/wiki" target="_blank"">9UU</a> 
           <a href="https://nhentai.net/" target="_blank"">NH本子[V]</a> 
@@ -553,6 +552,45 @@
           <div class="andro_product andro_product-list">
             <div class="andro_product-badge andro_badge-featured">
               <i class="fa fa-star"></i>
+              <span>羽毛制作</span>
+            </div>
+            <div class="andro_product-thumb">
+              <img src="assets/img/products/21.png" alt="product">
+            </div>
+            <div class="andro_product-body">
+              <div class="andro_rating-wrapper">
+                <div class="andro_rating">
+                  <i class="fa fa-star active"></i>
+                  <i class="fa fa-star active"></i>
+                  <i class="fa fa-star active"></i>
+                  <i class="fa fa-star active"></i>
+                  <i class="fa fa-star active"></i>
+                  <i class="fa fa-star active"></i>
+                </div>
+                <span>血条美化</span>
+              </div>
+              <h5 class="andro_product-title"> 魔灵42级血条美化 </h5>
+              <p>说明：[需要有魔灵42级血条美化] 修改成102级血条.</p>
+              <div class="andro_product-footer">
+                <div class="andro_product-price">
+                  <span>魔灵42级血条美化</span>
+	<span>羽毛制作</span>
+                </div>
+                <div class="btn-group">
+                  <a href="https://dog.lanzous.com/iD263m3g72f" target="_blank" class="andro_btn-custom btn-sm">现在下载</a>
+                  <button type="button" class="andro_btn-custom dropdown-toggle dropdown-toggle-split btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="sr-only">Toggle Dropdown</span>
+                  </button>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Product End -->
+ <!-- Product Start -->
+          <div class="andro_product andro_product-list">
+            <div class="andro_product-badge andro_badge-featured">
+              <i class="fa fa-star"></i>
               <span>莫言(✿◡‿◡)</span>
             </div>
             <div class="andro_product-thumb">
@@ -953,7 +991,7 @@
         </div>
 
         <div class="col-lg-6">
-			               <!-- Product Start -->
+          <!-- Product Start -->
 
 
           <div class="andro_product andro_product-list">
@@ -984,7 +1022,7 @@
 	<span>羽毛制作</span>
                 </div>
                 <div class="btn-group">
-                  <a href="https://dog.lanzous.com/iwnS4lxwtgb" target="_blank" class="andro_btn-custom btn-sm">现在下载</a>
+                  <a href="https://dog.lanzous.com/il7hzm3g6wj" target="_blank" class="andro_btn-custom btn-sm">现在下载</a>
                   <button type="button" class="andro_btn-custom dropdown-toggle dropdown-toggle-split btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="sr-only">Toggle Dropdown</span>
                   </button>
