--- a/setu.html
+++ b/setu.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>隐藏内容</title>
-
+  <audio id="bgMusic" src="assets/js/d.mp3" autoplay preload loop="loop"></audio>
   <!-- Vendor Stylesheets -->
   <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/plugins/animate.min.css">
